--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,12 @@
     transform: rotate(360deg);
   }
 }
+.logo-img {
+  max-height: 50px;
+}
+.button-card {
+  margin-top: 20px;}
+.search-card {
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
